--- a/ProAcc/Views/PhaseMaster/_PhaseIndex.cshtml
+++ b/ProAcc/Views/PhaseMaster/_PhaseIndex.cshtml
@@ -3,8 +3,12 @@
     var pdetails = ViewBag.phasedetails;
 }
 @*<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>*@
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>*@
+
+<link href="~/Asset/Scripts/Datatable/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+<script src="~/Asset/Scripts/Datatable/jquery.dataTables.min.js"></script>
+<script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>
 
 <table class="table" id="tblPhase">
     <thead>
@@ -35,19 +39,19 @@
 </table>
 
 @*<script>
-        $(document).ready(function () {
-            $('#tblPhase').DataTable({
-                "ajax": {
-                    "url": '@Url.Action("PhaseIndex","PhaseMaster")',
-                    "type": "GET",
-                    "datatype": "json"
-                },
-                "columns": [
-                    { "data": "PhaseName" }                   
-                ]
-            });
-        } );
-</script>*@
+            $(document).ready(function () {
+                $('#tblPhase').DataTable({
+                    "ajax": {
+                        "url": '@Url.Action("PhaseIndex","PhaseMaster")',
+                        "type": "GET",
+                        "datatype": "json"
+                    },
+                    "columns": [
+                        { "data": "PhaseName" }
+                    ]
+                });
+            } );
+    </script>*@
 
 <script type="text/javascript">
      //$(document).ready(function () {
@@ -64,7 +68,7 @@
         $("#tblPhase").dataTable();
         //funct();
         //Getda();
-        
+
     });
 
     function Getda() {
