--- a/ProAcc/Views/Userasdad/Index.cshtml
+++ b/ProAcc/Views/Userasdad/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using PagedList;
 @using PagedList.Mvc;
-@model List<ProACC_DB.Consultant>
+@model List<ProACC_DB.UserMaster>
 
 @{
     ViewBag.Title = "Index";
