--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -390,6 +390,24 @@
                                     </a>
                                     <ul>
                                         <li>
+                                            <a href="@Url.Action("Create", "ProjectCreation")">
+                                                <i class="metismenu-icon pe-7s-diamond"></i>
+                                                Project Creation
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="@Url.Action("Create", "InstanceCreation")">
+                                                <i class="metismenu-icon pe-7s-diamond"></i>
+                                                Instance Creation
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="@Url.Action("Create", "Activity")">
+                                                <i class="metismenu-icon pe-7s-diamond"></i>
+                                                Activity Creation
+                                            </a>
+                                        </li>
+                                        <li>
                                             <a href="@Url.Action("Create", "CustomerProjectConfigs")">
                                                 <i class="metismenu-icon pe-7s-diamond"></i>
                                                 Add Project to Customer
