--- a/ProAcc/Views/Customers/Create.cshtml
+++ b/ProAcc/Views/Customers/Create.cshtml
@@ -27,7 +27,10 @@
 
 <div id="customer">
     @Html.Partial("_Customercreate")
-    @Html.Partial("_CustomerIndex", "Customer")
+    @*@Html.Partial("_CustomerIndex", "Customer")*@
+    <div id="divCustomers">
+
+    </div>
 </div>
 <div id="consultant">
     @*@Html.Partial("_UserCreate",Model.User)*@
@@ -36,8 +39,26 @@
 
 <script type="text/javascript">
 
+    function loadCustomer() {
+        $.ajax({
+            type: "GET",
+            url: '@Url.Action("GetCustomers","Customers")', 
+            
+                //data: { Company_Name: CompanyName, Industry_Sector: IndustrySector, Phone: custphone, Email: custEmail },
+            success: function (response) {
+                $("#divCustomers").html(response);
+                    },
+                    failure: function (response) {
+                       alert(response.responseText);
+                    },
+                    error: function (response) {
+                        alert(response.responseText);
+                    }
+            });
+    }
 
     $(document).ready(function () {
+        loadCustomer()
         $("#customer").hide();
         $("#consultant").hide();
         $("#top_menu").hide();
