--- a/ProAcc/Views/Customers/_CustomerIndex.cshtml
+++ b/ProAcc/Views/Customers/_CustomerIndex.cshtml
@@ -1,11 +1,11 @@
-﻿
-@{
+﻿@model IEnumerable<ProACC_DB.Customer>
+@*@{
     var custdetails = ViewBag.customersIndex;
-}
+}*@
 
-@*<link href="~/Asset/Scripts/Datatable/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+<link href="~/Asset/Scripts/Datatable/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
 <script src="~/Asset/Scripts/Datatable/jquery.dataTables.min.js"></script>
-<script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>*@
+<script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>
 
 <table class="table" id="tblCustomer">
     <thead>
@@ -18,7 +18,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in custdetails)
+        @foreach (var item in Model)
         {
         <tr>
             <td>
@@ -88,7 +88,14 @@
                 success: function (response) {
                     if (response == "success") {
                         alert("Customer deleted successfully!");                        
-                        location.reload();
+                        //location.reload();
+                        loadCustomer();
+                            $("#txtCompanyName").val("");
+                            $("#txtIndustrySector").val("");
+                            $("#txtCustomerPhone").val("");
+                            $("#txtCustomerEmail").val("");
+                            $("#btnCustomerUpdate").hide();
+                            $("#btnCustomerCreate").show();
                     }
                 },
                 failure: function (response) {
