--- a/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
@@ -190,7 +190,7 @@
                     //dataType: "json",
                     success: function (response) {
                         if (response == "success") {
-                            alert("Customers Edited successfully!");
+                            alert("Project Edited successfully!");
                            loadProjectCreation();
                             $("#txtProjectName").val("")
                             $("#drpCustomer").val(0)
