--- a/ProAcc/Views/Customers/_CustomerIndex.cshtml
+++ b/ProAcc/Views/Customers/_CustomerIndex.cshtml
@@ -51,7 +51,7 @@
     });    
 
     $(".editCustomer").on("click", function () {
-        debugger;
+        //debugger;
         var id = $(this).next().val();
         $.ajax({
             url: '@Url.Action("GetCustomerById","Customers")',
