Changes in User controller

--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -372,7 +372,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="@Url.Action("Index", "Consultants")">
+                                            <a href="@Url.Action("Index", "User")">
                                                 <i class="metismenu-icon pe-7s-diamond"></i>
                                                 View SAP Consultant
                                             </a>
@@ -407,7 +407,7 @@
                                                 Activity Creation
                                             </a>
                                         </li>
-                                        <li>
+                                        @*<li>
                                             <a href="@Url.Action("Create", "CustomerProjectConfigs")">
                                                 <i class="metismenu-icon pe-7s-diamond"></i>
                                                 Add Project to Customer
@@ -430,7 +430,7 @@
                                                 <i class="metismenu-icon pe-7s-diamond"></i>
                                                 View Instance List
                                             </a>
-                                        </li>
+                                        </li>*@
                                         <li>
                                             <a href="@Url.Action("Index", "PhaseMaster")">
                                                 <i class="metismenu-icon pe-7s-diamond"></i>
