--- a/ProAcc/Views/User/CreateUsers.cshtml
+++ b/ProAcc/Views/User/CreateUsers.cshtml
@@ -114,14 +114,14 @@
                 <div class="position-relative form-group">
                     @Html.Label("User Type", htmlAttributes: new { @class = "control-label col-md-5 required" })
                     <div class="col-md-10">
-                        @Html.DropDownList("Type",null, htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("UserTypeID",null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.UserTypeID, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="position-relative form-group" id="divRole">
                     @Html.Label("Role", htmlAttributes: new { @class = "control-label col-md-5" })
                     <div class="col-md-10">
-                        @Html.DropDownList("Role_Data", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("RoleID", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.RoleMaster, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                 <div class="position-relative form-group" id="divCust">
                     @Html.LabelFor(model => model.Customer, "Customer", htmlAttributes: new { @class = "control-label col-md-5" })
                     <div class="col-md-10">
-                        @Html.DropDownList("Cust", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("Customer_Id", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Customer, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -274,7 +274,7 @@
 </script>
 
 <script>
-    $("#Type").change(function () {
+    $("#UserTypeID").change(function () {
         var Id = $(this).val();
         if (Id == 1) {
             $("#divRole").hide();
@@ -380,7 +380,7 @@
     }
 
     function SubmitConsultant() {
-        //debugger;
+        debugger;
         //alert("HI");
         var Name1 = $("#txtName1").val();
         var Desc = $("#txtDesc").val();
@@ -388,6 +388,10 @@
         var Email1 = $("#txtEmail1").val();
         var LoginID = $("#LoginID").val();
         var Passwd = $("#Passwd").val();
+        var UserTypeID = $("#UserTypeID").val();
+        var Role_Data = $("#Role_Data").val();
+        var Cust = $("#Cust").val();
+        
         //var txtConsCnfmPassword = $("#txtConsCnfmPassword").val();
 
         var lblName1 = $("#lblName1").text(); // val();
